@@ -11,9 +11,9 @@ module Moneta
       # @param [Hash] options
       # @option options [Integer] :port (9000) TCP port
       # @option options [String] :host ('127.0.0.1') Hostname
-      # @option options [String] :file Unix socket file name as alternative to `:port` and `:host`
+      # @option options [String] :socket Unix socket file name as alternative to `:port` and `:host`
       def initialize(options = {})
-        @socket = options[:file] ? UNIXSocket.open(options[:file]) :
+        @socket = options[:socket] ? UNIXSocket.open(options[:socket]) :
           TCPSocket.open(options[:host] || '127.0.0.1', options[:port] || DEFAULT_PORT)
       end
 
