@@ -1,15 +1,15 @@
 # Generated by generate-specs
 require 'helper'
 
-describe_moneta "shared" do
+describe_moneta "shared_tcp" do
   def log
-    @log ||= File.open(File.join(make_tempdir, 'shared.log'), 'a')
+    @log ||= File.open(File.join(make_tempdir, 'shared_tcp.log'), 'a')
   end
 
   def new_store
     Moneta.build do
       use(:Shared, :port => 9001) do
-        adapter :PStore, :file => File.join(make_tempdir, 'shared')
+        adapter :PStore, :file => File.join(make_tempdir, 'shared_tcp')
       end
     end
   end
