@@ -22,8 +22,8 @@ describe_moneta "stack_memory_file" do
   end
 
   include_context 'setup_store'
-  it_should_behave_like 'create'
   it_should_behave_like 'multiprocess'
+  it_should_behave_like 'not_create'
   it_should_behave_like 'not_increment'
   it_should_behave_like 'null_stringkey_stringvalue'
   it_should_behave_like 'persist_stringkey_stringvalue'
